[tool.poetry]
name = "stellar-model"
version = "0.6.0"
description = "Parse the raw Stellar data into Python models."
authors = ["overcat <4catcode@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/StellarCN/stellar-model"
repository = "https://github.com/StellarCN/stellar-model"
documentation = "https://stellar-model.readthedocs.io"
keywords = ["stellar", "stellar-model", "pydantic"]
license = "Apache License 2.0"
include = ["stellar_model/py.typed", "LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.8"
pydantic = "^2.9.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/StellarCN/stellar-mode/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["stellar_model", "tests"]
skip_glob = ["docs"]
filter_files = true

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''